--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11542,6 +11542,24 @@ a.text-dark:focus {
   border-color: #f8b24f;
 }
 
+.alert-warning {
+  color: #fb6340;
+  background-color: #fc7c5f;
+  border-color: #fc7c5f;
+}
+
+.btn.btn-facebook {
+  color: #fff;
+  background-color: #3b5999;
+  border-color: #3b5999;
+}
+
+.btn.btn-google-plus {
+  color: #fff;
+  background-color: #dd4b39;
+  border-color: #dd4b39;
+}
+
 .footer {
   background: #e5e5e5;
   padding: 1.5rem 0;
@@ -11599,5 +11617,41 @@ a.text-dark:focus {
 
 .card-profile .card-profile-actions {
   padding: 0.875rem;
+}
+
+.modal.intro-modal .modal-dialog {
+  max-width: 800px;
+  margin: 30px auto;
+}
+
+.modal.intro-modal .modal-body {
+  position: relative;
+  padding: 0px;
+}
+
+.modal.intro-modal .close {
+  position: absolute;
+  right: -30px;
+  top: 0;
+  z-index: 999;
+  font-size: 2rem;
+  font-weight: normal;
+  color: #fff;
+  opacity: 1;
+}
+
+.user-avatar {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.user-avatar img {
+  margin: 0 5px 0 0 !important;
+  max-height: 55px;
+}
+
+.navbar-collapse.collapsing,
+.navbar-collapse.show {
+  margin-top: 70px;
 }
 
