--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,6 +26,26 @@
     border-color: #f8b24f;
 }
 
+.alert-warning {
+    color: #fb6340;
+    background-color: #fc7c5f;
+    border-color: #fc7c5f;
+}
+
+.btn {
+    &.btn-facebook {
+        color: #fff;
+        background-color: #3b5999;
+        border-color: #3b5999;
+    }
+
+    &.btn-google-plus {
+        color: #fff;
+        background-color: #dd4b39;
+        border-color: #dd4b39;
+    }
+}
+
 .footer {
     background: #e5e5e5;
     padding: 1.5rem 0;
@@ -82,4 +102,46 @@
 
 .card-profile .card-profile-actions {
     padding: .875rem;
+}
+
+.modal {
+    &.intro-modal {
+        .modal-dialog {
+            max-width: 800px;
+            margin: 30px auto;
+        }
+
+        .modal-body {
+            position:relative;
+            padding:0px;
+        }
+        .close {
+            position:absolute;
+            right:-30px;
+            top:0;
+            z-index:999;
+            font-size:2rem;
+            font-weight: normal;
+            color:#fff;
+            opacity:1;
+        }
+    }
+}
+
+.user-avatar {
+    margin: 0 !important;
+    padding: 0 !important;
+
+    img {
+        margin: 0 5px 0 0 !important;
+        max-height: 55px;
+    }
+}
+
+.collapse:not(.show) {
+
+}
+
+.navbar-collapse.collapsing, .navbar-collapse.show {
+    margin-top: 70px;
 }
